@@ -1,0 +1,44 @@
+return {
+	xmasball2 = {
+		buildcostenergy = 0,
+		buildcostmetal = 0,
+		buildtime = 255,
+		canattack = false,
+		canrepeat = false,
+		category = "MOBILE WEAPON NOTSUB NOTSHIP NOTAIR NOTHOVER SURFACE",
+		collisionvolumeoffsets = "0 0 0",
+		collisionvolumescales = "6.8 6.8 6.8",
+		collisionvolumetype = "Sphere",
+		crushresistance = 2500,
+		description = "Xmas ball",
+		explodeas = "blank",
+		footprintx = 1,
+		footprintz = 1,
+		hidedamage = true,
+		idleautoheal = 0,
+		maxdamage = 500000,
+		maxslope = 64,
+		mass = 50,
+		maxwaterdepth = 0,
+		name = "Xmas ball",
+		objectname = "xmasball2.s3o",
+		repairable = false,
+		script = "xmasball.lua",
+		seismicsignature = 0,
+		selfdestructas = "blank",
+		sightdistance = 0,
+		reclaimable = false,
+		usebuildinggrounddecal = false,
+		yardmap = "f",
+        blocking = true,
+        stealth = true,
+        sonarStealth = true,
+        capturable = false,
+		canmove = true,
+		maxvelocity = 1,
+		movementclass = "CRITTERH",
+		customparams = {
+			nohealthbars = true,
+		},
+	},
+}
